@@ -59,7 +59,7 @@ Upon subscribing, you should (unless you specified otherwise) receive an
 introductory message containing list policies and features.  Save this
 message for future reference; it will also contain exact directions for
 unsubscribing.  If you lose the intro mail and would like another copy of
-the policies, send this message to $WHOAMI:
+the policies, send this message to $MJ:
 
         intro scooters
 
